# Project-2-End-to-End-Retail-Analytics-Pipeline

./: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
config/: airflow.cfg
dags/: upload_to_s3.py
dbt_retailitics_project/: dbt_project.yml  package-lock.yml  packages.yml
dbt_retailitics_project/models/staging/: _sources.yml  raw_data_quality.sql  schema.yml  stg_customers.sql  stg_products.sql  stg_retail_transactions.sql  stg_stores.sql  stg_transactions.sql
dbt_retailitics_project/tests/: assert_transaction_math_integrity.sql
docs/: infra_notes.md
scripts/: data_generator.py  data_generator_2.py  data_validation.py  online_data_generator.py  test.ipynb  upload_to_s3_cron.sh
scripts/sql_setup/: customers_setup.sql  products_setup.sql  stores_setup.sql
